--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -33,6 +33,8 @@ gem 'jbuilder', '~> 2.5'
 gem 'pygments.rb', '~> 0.6.0'
 gem 'redcarpet', '~> 3.2.2'
 
+# Makes URLs SEO complient.
+gem 'friendly_id', '~> 5.2', '>= 5.2.1'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
