--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -36,6 +36,9 @@ gem 'redcarpet', '~> 3.2.2'
 # Makes URLs SEO complient.
 gem 'friendly_id', '~> 5.2', '>= 5.2.1'
 
+# To add pagination to the main articles page.
+gem 'will_paginate', '~> 3.1', '>= 3.1.6'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
