--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -5,7 +5,6 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.4'
 # Use sqlite3 as the database for Active Record
@@ -38,6 +37,9 @@ gem 'friendly_id', '~> 5.2', '>= 5.2.1'
 
 # To add pagination to the main articles page.
 gem 'will_paginate', '~> 3.1', '>= 3.1.6'
+
+# Allows the contact page to work.
+gem 'mail_form', '~> 1.7'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
