--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -38,8 +38,11 @@ gem 'friendly_id', '~> 5.2', '>= 5.2.1'
 # To add pagination to the main articles page.
 gem 'will_paginate', '~> 3.1', '>= 3.1.6'
 
-# Allows the contact page to work.
+# Allows the ability to send email from a form.
 gem 'mail_form', '~> 1.7'
+
+# Handles user authentication
+gem 'devise', '~> 4.3'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
