--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,5 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: /home/deploy/blog/shared/db/production.sqlite3
+#  database: db/production.sqlite3
